add cached_image.d.ts for CachedImage
Signed-off-by: baosiyuan <baosiyuan@huawei.com>

--- a/build-tools/collect_application_api/tsconfig.json
+++ b/build-tools/collect_application_api/tsconfig.json
@@ -14,6 +14,7 @@
         "Blank",
         "Button",
         "Calendar",
+        "CachedImage",
         "CalendarPicker",
         "Camera",
         "Canvas",
@@ -134,6 +135,11 @@
             "name": "Button",
             "type": "ButtonAttribute",
             "instance": "ButtonInstance"
+          },
+          {
+            "name": "CachedImage",
+            "type": "CachedImageAttribute",
+            "instance": "CachedImageInstance"
           },
           {
             "name": "Calendar",
