--- a/build-tools/collect_application_api/tsconfig.json
+++ b/build-tools/collect_application_api/tsconfig.json
@@ -13,6 +13,7 @@
         "Badge",
         "Blank",
         "Button",
+        "CachedImage",
         "Calendar",
         "CalendarPicker",
         "Camera",
@@ -134,6 +135,11 @@
             "name": "Button",
             "type": "ButtonAttribute",
             "instance": "ButtonInstance"
+          },
+          {
+            "name": "CachedImage",
+            "type": "CachedImageAttribute",
+            "instance": "CachedImageInstance"
           },
           {
             "name": "Calendar",
